# namplay

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  io.github.hedgieinsocks.Namplay.yaml
.github/workflows/: flatpak.yml
data/: io.github.hedgieinsocks.Namplay.desktop  io.github.hedgieinsocks.Namplay.gschema.xml  window.blp
src/: audio.rs  main.rs  preset.rs  profile.rs  ui.rs
src/audio/: dsp.rs  ir.rs  mod.rs  processor.rs  tuner.rs
