[package]
name = "namplay"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "namplay"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_10"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
gio = "0.22"
glib = "0.22"
nam-rs = "0.3"
jack = "0.13"
fft-convolver = "0.4"
hound = "3.5"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
biquad = "0.6.0"
pitch-detection = "0.3"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }

[profile.release]
lto = true
